log/build_2025-10-12_17-03-11/bubble_protocol/stderr.log
  File "/home/nhs/engineer/install/bubble_protocol/lib/python3.10/site-packages/bubble_protocol/hardware.py", line 144
    print(rx_byte!!)
                 ^
SyntaxError: invalid syntax

